Prepare proper basic schema for db

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,11 @@
-# Server Configuration
+# port to run the server on
 PORT=8080
 
-# Add other environment variables as needed
-# DATABASE_URL=
-# API_KEY=
+# connection to the db
+DATABASE_URL=postgres://postgres:postgres@127.0.0.1:5432/meeting_planner?sslmode=disable
+
+# settings for goose migrations
+GOOSE_DRIVER=postgres
+GOOSE_DBSTRING=${DATABASE_URL}
+GOOSE_MIGRATION_DIR=./internal/db/migrations
+GOOSE_TABLE=goose_migrations
