--- a/backend/.env.dev
+++ b/backend/.env.dev
@@ -1,3 +1,6 @@
+PORT=8080
 DATABASE_URL=postgres://postgres:postgres@127.0.0.1:5432/meeting_planner?sslmode=disable
-DEV_DB_INIT=true
-
+GOOSE_DRIVER=postgres
+GOOSE_DBSTRING=${DATABASE_URL}
+GOOSE_MIGRATION_DIR=./internal/db/migrations
+GOOSE_TABLE=goose_migrations
