--- a/backend/sqlc.yaml
+++ b/backend/sqlc.yaml
@@ -10,3 +10,6 @@ sql:
         out: "internal/db/sqlc"
         sql_package: "pgx/v5"
         emit_json_tags: true
+        emit_interface: true
+        emit_empty_slices: true
+        emit_pointers_for_null_types: true
